# fast-mlsirm

./: .coverage  .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  commit_message.txt  pr_description.md  pyproject.toml  test_cli_import.py
.Jules/: palette.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
.github/workflows/: cflite_pr.yml  ci.yml  codeql.yml
.jules/: bolt.md  palette.md  sentinel.md
crates/fast-mlsirm-py/: Cargo.toml
crates/fast-mlsirm-py/src/: lib.rs
crates/mlsirm-core/: Cargo.toml
crates/mlsirm-core/src/: agreement.rs  cdm.rs  classification.rs  crm.rs  detect.rs  dif.rs  equating.rs  exposure.rs  facets.rs  factor.rs  fitstats.rs  gpcm.rs  gpu.rs  gpu_eapsum.rs  gpu_marginal.rs  gpu_plausible.rs  gpu_scoring.rs  grm.rs  grm_mirt.rs  gtheory.rs  ksirt.rs  lib.rs  linking.rs  lltm.rs  marginal.rs  mhrm.rs  mirt.rs  mixed.rs  mixture.rs  mmle.rs  mokken.rs  nodes.rs  nominal.rs  nominal_mirt.rs  oakes.rs  parallel.rs  poly.rs  poly_marginal.rs  quadrature.rs  rasch_cml.rs  (+9 more)
crates/mlsirm-core/tests/: marginal_recovery.rs  proptest_neg_loglik.rs
docs/: 20b_product_readiness.md  agents_papers.md  buyer_demo_storyboard.md  commercial_readiness.md  enterprise_sales_readiness.md  figma_product_design_packet.md  fit_diagnostics_plan.md  irt_stability_product_design.md  mmle_marginal_lsirm_design.md  pr25_formula_review.md  prd_trd_summary.md  release_acceptance.md  response_process_diagnostics.tex  response_process_diagnostics_design.md  roi_evidence_model.md
docs/papers/: README.md  corpus-triage-batch3.md  corpus-triage-batch4.md  corpus-triage-batch5.md  corpus-triage-batch6.md  gpcm-nominal-design-spec.md  group_a_specs.md  group_b_specs.md  group_c_specs.md  implemented-literature-map.md  mls2plm-canonical-equations.md  mmle-lsirm-formula-compilation.md
docs/superpowers/plans/: 2026-07-02-20b-benchmark-evidence.md  2026-07-02-20b-buyer-evidence-html-review.md  2026-07-02-20b-buyer-evidence-packet.md  2026-07-02-20b-product-readiness.md  2026-07-02-20b-release-evidence-index.md  2026-07-03-20b-commercial-release-builder.md  2026-07-03-20b-figma-evidence-sync.md  2026-07-03-20b-pr-queue-governance.md  2026-07-03-20b-procurement-due-diligence.md
docs/superpowers/specs/: 2026-07-02-20b-benchmark-evidence-design.md  2026-07-02-20b-buyer-evidence-html-review-design.md  2026-07-02-20b-buyer-evidence-packet-design.md  2026-07-02-20b-product-readiness-design.md  2026-07-02-20b-release-evidence-index-design.md  2026-07-03-20b-commercial-release-builder-design.md  2026-07-03-20b-figma-evidence-sync-design.md  2026-07-03-20b-pr-queue-governance-design.md  2026-07-03-20b-procurement-due-diligence-design.md
examples/: rust_backend_smoke.py
examples/enterprise_demo/: README.md  benchmark_manifest.json  figma_design_packet.json  product_completion_manifest.json  roi_manifest.json
fuzz/: Cargo.toml  README.md
fuzz/atheris/: _common.py  fuzz_config.py  fuzz_load_factor_csv.py  fuzz_render_report.py
fuzz/corpus/load_factor_csv/: header_only.csv  single_row.csv  valid_two_factors.csv
fuzz/corpus/render_report/: dimensionality.json  fit_diagnostics.json
fuzz/fuzz_targets/: neg_loglik.rs
python/fast_mlsirm/: __init__.py  backend.py  cdm.py  classification.py  cli.py  cli.py.orig  config.py  crm.py  detect.py  diagnostics.py  dif.py  docstrings_test_helper.py  equating.py  exposure.py  facets.py  factor.py  fit.py  fitstats.py  gpcm.py  grm.py  grm_mirt.py  gtheory.py  inference.py  io.py  ksirt.py  linking.py  lltm.py  math.py  mhrm.py  mirt.py  mixed.py  mixture.py  models.py  mokken.py  nominal.py  nominal_mirt.py  objective.py  parallel_analysis.py  polytomous.py  preprocessing.py  (+15 more)
python/fast_mlsirm/estimators/: marginal.py  mmle.py
requirements/: ci.in  ci.txt  package.in  package.txt
scripts/: build_benchmark_report.py  build_buyer_packet.py  build_commercial_release.py  build_figma_evidence_sync.py  build_pr_queue_governance.py  build_procurement_due_diligence.py  build_release_evidence_index.py  release_acceptance.py  sales_readiness.py
tests/: dimension_diagnostics.json  test_backend.py  test_benchmark_report.py  test_buyer_evidence_packet.py  test_cli.py  test_commercial_release_builder.py  test_config.py  test_coverage_gap.py  test_diagnostics.py  test_docstrings.py  test_estimator_marginal.py  test_estimator_mmle.py  test_figma_evidence_sync.py  test_fit.py  test_fit_dos.py  test_fit_pipeline.py  test_fitstats.py  test_fuzz_properties.py  test_initial_params.py  test_io.py  test_irt_stability.py  test_marginal_parity.py  test_math.py  test_mixed_items.py  test_objective.py  test_paper_features.py  test_pr_queue_governance.py  test_procurement_due_diligence.py  test_release_evidence_index.py  test_report.py  test_rust_parity.py  test_sales_readiness.py  test_scoring_methods.py  test_security_hardening.py  test_serving.py  test_simulation.py
tests/oracles/: oracle_utility.py
tests/unit/: agreement_tests.rs  cdm_tests.rs  classification_tests.rs  crm_tests.rs  detect_tests.rs  dif_tests.rs  equating_tests.rs  exposure_tests.rs  facets_tests.rs  factor_tests.rs  fitstats_batch3_tests.rs  fitstats_ic_tests.rs  fitstats_ld_tests.rs  fitstats_m2_branch_tests.rs  fitstats_tests.rs  fitstats_vuong_tests.rs  gpcm_tests.rs  grm_tests.rs  gtheory_tests.rs  ksirt_tests.rs  lib_additional_tests.rs  lib_tests.rs  linking_branch_tests.rs  linking_tests.rs  lltm_tests.rs  marginal_covariate_interaction_tests.rs  marginal_em_endpoint_tests.rs  marginal_recovery_tests.rs  marginal_xirule_parse_tests.rs  mhrm_tests.rs  mixed_tests.rs  mixture_tests.rs  mmle_tests.rs  mokken_tests.rs  nodes_coverage_branch_tests.rs  nodes_tests.rs  nominal_tests.rs  oakes_tests.rs  parallel_tests.rs  poly_marginal_tests.rs  (+19 more)
