[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-mlsirm"
version = "0.1.0"
description = "Fast simulation, fitting, and recovery diagnostics for MLSIRM/MLS2PLM models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContextualWisdomLab" }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8"]
gpu = ["cupy-cuda12x>=13; platform_system == 'Linux'", "mlx>=0.22; platform_system == 'Darwin'", "pyopencl>=2025.2"]

[project.scripts]
fast-mlsirm = "fast_mlsirm.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
