[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "fast-mlsirm"
version = "0.1.0"
description = "Fast simulation, fitting, and recovery diagnostics for MLSIRM/MLS2PLM models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContextualWisdomLab" }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
fast-mlsirm = "fast_mlsirm.cli:main"

[tool.maturin]
bindings = "pyo3"
features = ["extension-module"]
manifest-path = "crates/fast-mlsirm-py/Cargo.toml"
module-name = "fast_mlsirm._core"
python-source = "python"

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
