[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "fast-mlsirm"
version = "0.1.0"
description = "Fast simulation, fitting, and recovery diagnostics for MLSIRM/MLS2PLM models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContextualWisdomLab" }]
dependencies = ["numpy>=1.24"]
keywords = ["irt", "psychometrics", "latent-space", "mlsirm", "pyo3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/ContextualWisdomLab/fast-mlsirm"
Repository = "https://github.com/ContextualWisdomLab/fast-mlsirm"
Issues = "https://github.com/ContextualWisdomLab/fast-mlsirm/issues"
Changelog = "https://github.com/ContextualWisdomLab/fast-mlsirm/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "build", "twine"]

[project.scripts]
fast-mlsirm = "fast_mlsirm.cli:main"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
manifest-path = "crates/fast-mlsirm-py/Cargo.toml"
module-name = "fast_mlsirm._core"
python-source = "python"

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
