[package]
name = "fast-mlsirm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
mlsirm-core = { path = "../crates/mlsirm-core" }

[workspace]

[[bin]]
name = "neg_loglik"
path = "fuzz_targets/neg_loglik.rs"
test = false
doc = false
bench = false
