[package]
name = "mlsirm-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core likelihood and gradient routines for fast-mlsirm."
homepage = "https://github.com/ContextualWisdomLab/fast-mlsirm"
repository = "https://github.com/ContextualWisdomLab/fast-mlsirm"
documentation = "https://github.com/ContextualWisdomLab/fast-mlsirm/blob/main/README.md"

[lib]
name = "mlsirm_core"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"], optional = true }
pollster = { version = "0.4.0", optional = true }
wgpu = { version = "30.0.0", optional = true }

[features]
# GPGPU acceleration of the neg-loglik + gradient hot path via wgpu.
# Enabled by default so the published wheel gains GPU execution; the code
# always falls back to the CPU implementation at runtime when no GPU adapter
# is available (e.g. CI). Build with --no-default-features for a CPU-only
# core with no wgpu dependency graph.
default = ["gpu"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }

[dev-dependencies]
# proptest is dual MIT / Apache-2.0 licensed -- permissive, matches this crate.
proptest = "1"
